🚚 Rename `color` → `fg` prop

--- a/packages/piny-forest/src/scroll/scroll.mdx
+++ b/packages/piny-forest/src/scroll/scroll.mdx
@@ -1,7 +1,7 @@
 # Scroll
 
 ```jsx live
-<Scroll height={300} color="white">
+<Scroll height={300} fg="white">
   <List>
     <ListItem height={75} bg="red">
       One
