--- a/packages/piny-forest/src/hstack/hstack.mdx
+++ b/packages/piny-forest/src/hstack/hstack.mdx
@@ -1,7 +1,7 @@
 # HStack
 
 ```jsx live
-<HStack align="center" gap="1rem" height={100} color="white" bg="whitesmoke">
+<HStack align="center" gap="1rem" height={100} fg="white" bg="whitesmoke">
   <Box bg="blue">1</Box>
   <Box bg="red">2</Box>
 </HStack>
