--- a/packages/piny-forest/src/vstack/vstack.mdx
+++ b/packages/piny-forest/src/vstack/vstack.mdx
@@ -1,7 +1,7 @@
 # VStack
 
 ```jsx live
-<VStack align="center" gap="1rem" color="white" bg="whitesmoke">
+<VStack align="center" gap="1rem" fg="white" bg="whitesmoke">
   <Box bg="blue">1</Box>
   <Box bg="red">2</Box>
 </VStack>
