--- a/packages/piny-forest/src/button/button.mdx
+++ b/packages/piny-forest/src/button/button.mdx
@@ -7,7 +7,7 @@
     colors: {
       primary: 'royalblue',
     },
-    buttonStyles: {
+    buttonVariants: {
       primary: {
         backgroundColor: 'primary',
         color: 'white',
