--- a/packages/piny-forest/src/input/input.mdx
+++ b/packages/piny-forest/src/input/input.mdx
@@ -4,7 +4,7 @@
 <Input
   defaultValue="Hello"
   theme={{
-    inputStyles: {
+    inputVariants: {
       default: {
         width: '100%',
       },
