--- a/packages/piny-forest/src/link/link.mdx
+++ b/packages/piny-forest/src/link/link.mdx
@@ -4,7 +4,7 @@
 <Link
   href="https://example.com"
   theme={{
-    linkStyles: {
+    linkVariants: {
       default: {
         color: 'royalblue',
         textDecoration: 'underline',
