--- a/packages/piny-forest/src/select/select.mdx
+++ b/packages/piny-forest/src/select/select.mdx
@@ -4,7 +4,7 @@
 <Select
   defaultValue="main"
   theme={{
-    selectStyles: {
+    selectVariants: {
       default: {
         width: '100%',
       },
