--- a/packages/piny-forest/src/text/text.mdx
+++ b/packages/piny-forest/src/text/text.mdx
@@ -17,7 +17,7 @@
     colors: {
       primary: 'blue',
     },
-    textStyles: {
+    textVariants: {
       primary: {
         color: 'primary',
         textDecoration: 'underline',
