--- a/packages/piny-forest/src/textarea/textarea.mdx
+++ b/packages/piny-forest/src/textarea/textarea.mdx
@@ -4,7 +4,7 @@
 <Textarea
   defaultValue="Hello"
   theme={{
-    textareaStyles: {
+    textareaVariants: {
       default: {
         width: '100%',
       },
