♻️ Reduce API of `Box`

--- a/packages/piny-forest/src/primitives/image/image.mdx
+++ b/packages/piny-forest/src/primitives/image/image.mdx
@@ -3,8 +3,6 @@
 ```jsx live
 <Image
   src="https://placekitten.com/2047/1536"
-  height="auto"
-  maxWidth="100%"
-  pss={{ borderRadius: 16 }}
+  pss={{ borderRadius: 16, height: 'auto', maxWidth: '100%' }}
 />
 ```
