--- a/packages/piny-forest/src/primitives/scroll/scroll.mdx
+++ b/packages/piny-forest/src/primitives/scroll/scroll.mdx
@@ -1,21 +1,21 @@
 # Scroll
 
 ```jsx live
-<Scroll height={300} fg="white">
+<Scroll h={300} fg="white">
   <List>
-    <ListItem height={75} bg="red">
+    <ListItem h={75} bg="red">
       One
     </ListItem>
-    <ListItem height={75} bg="navy">
+    <ListItem h={75} bg="navy">
       Two
     </ListItem>
-    <ListItem height={75} bg="lime">
+    <ListItem h={75} bg="lime">
       Three
     </ListItem>
-    <ListItem height={75} bg="magenta">
+    <ListItem h={75} bg="magenta">
       Four
     </ListItem>
-    <ListItem height={75} bg="yellow">
+    <ListItem h={75} bg="yellow">
       Five
     </ListItem>
   </List>
