--- a/packages/piny-forest/src/primitives/hstack/hstack.mdx
+++ b/packages/piny-forest/src/primitives/hstack/hstack.mdx
@@ -1,8 +1,10 @@
 # HStack
 
 ```jsx live
-<HStack align="center" gap="1rem" height={100} fg="white" bg="whitesmoke">
-  <Box bg="blue">1</Box>
+<HStack align="center" gap="1rem" h={100} fg="white" bg="whitesmoke">
+  <Box bg="blue" pss={{ flex: '1' }}>
+    1
+  </Box>
   <Box bg="red">2</Box>
 </HStack>
 ```
