✨ Create `piny-theme`

--- a/packages/piny-forest/src/primitives/box/box.mdx
+++ b/packages/piny-forest/src/primitives/box/box.mdx
@@ -1,5 +1,21 @@
 # Box
 
+```js
+import { Box } from 'piny-forest'
+```
+
+Core component used inside all other components.
+
+## Props
+
+- `m` — `margin`
+- `p` — `padding`
+- `s` — `size`
+- `w` — `width`
+- `h` — `height`
+- `fg` — `color`
+- `bg` — `backgroundColor`
+
 ```jsx live
 <Box pss={{ color: 'red' }}>Hello World</Box>
 ```
