--- a/packages/piny-forest/src/primitives/hstack/hstack.mdx
+++ b/packages/piny-forest/src/primitives/hstack/hstack.mdx
@@ -1,7 +1,7 @@
 # HStack
 
 ```jsx live
-<HStack align="center" gap="1rem" h={100} fg="white" bg="whitesmoke">
+<HStack align="center" gap="1rem" h={100} fg="white" bg="lime">
   <Box bg="blue" pss={{ flex: '1' }}>
     1
   </Box>
