✨ Apply multiple variants

--- a/packages/piny-forest/src/primitives/api.mdx
+++ b/packages/piny-forest/src/primitives/api.mdx
@@ -4,11 +4,11 @@
 
 ### Core props
 
-| Prop      | Description                                                         |
-| --------- | ------------------------------------------------------------------- |
-| `as`      | [Changes HTML element](#change-html-element)                        |
-| `pss`     | [Theme-aware styles](#theme-aware-styles)                           |
-| `variant` | [Component style variants](#variants) (see docs for each component) |
+| Prop      | Description                                                            |
+| --------- | ---------------------------------------------------------------------- |
+| `as`      | [Changes HTML element](#change-html-element)                           |
+| `pss`     | [Apply theme-aware styles](#theme-aware-styles)                        |
+| `variant` | [Set component style variant](#variants) (see docs for each component) |
 
 ### Style props
 
