♻️ Update space scales to use verbose keys

--- a/packages/forest/src/primitives/api.mdx
+++ b/packages/forest/src/primitives/api.mdx
@@ -188,8 +188,8 @@ Use `variant` prop to set styles using values from your [theme](#theme).
 
 ```jsx live
 <Box
-  p={4}
-  mx={2}
+  p="s.16"
+  mx="s.8"
   pss={{
     outline: '1px solid',
     display: 'inline-block',
@@ -202,8 +202,8 @@ Use `variant` prop to set styles using values from your [theme](#theme).
 ```jsx live
 <Box
   pss={{
-    padding: 4,
-    marginX: 2,
+    padding: 's.16',
+    marginX: 's.8',
     outline: '1px solid',
     display: 'inline-block',
   }}
