✨ Add `Action` component

--- a/packages/forest/src/components/pin/pin.mdx
+++ b/packages/forest/src/components/pin/pin.mdx
@@ -36,10 +36,12 @@ Without `PinMedia` both variants look the same .
   </PinTags>
   <PinActions>
     <Text>1 minute ago</Text>
-    <Button>later</Button>
-    <Button>like</Button>
-    <Button>archive</Button>
-    <Button ml="auto">remove</Button>
+    <Action>later</Action>
+    <Action>like</Action>
+    <Action>archive</Action>
+    <Action accent="destructive" ml="auto">
+      remove
+    </Action>
   </PinActions>
 </Pin>
 ```
