--- a/packages/forest/src/primitives/api.mdx
+++ b/packages/forest/src/primitives/api.mdx
@@ -139,7 +139,7 @@ Use `variant` prop to set styles using values from your [theme](#theme).
       backgroundColor: 'primary',
       $md: {
         size: 128,
-        backgroundColor: 'accent',
+        backgroundColor: 'highlight',
       },
       ':hover': {
         backgroundColor: 'lime',
@@ -160,7 +160,7 @@ Use `variant` prop to set styles using values from your [theme](#theme).
 >
   <Box
     s={{ $: 64, $md: 128 }}
-    bg={{ $: 'primary', $md: 'accent', ':hover': 'lime' }}
+    bg={{ $: 'primary', $md: 'highlight', ':hover': 'lime' }}
   />
 </Provider>
 ```
