--- a/packages/forest/src/components/pin/pin.mdx
+++ b/packages/forest/src/components/pin/pin.mdx
@@ -35,7 +35,9 @@ Without `PinMedia` both variants look the same .
     <Tag href="#tag">Tag 3</Tag>
   </PinTags>
   <PinActions>
-    <Text>1 minute ago</Text>
+    <Text variant="secondary" fg="grey.50">
+      1 minute ago
+    </Text>
     <Action>later</Action>
     <Action>like</Action>
     <Action>archive</Action>
