📝 Update `Action` and `Tag` docs

--- a/packages/forest/src/components/action/action.mdx
+++ b/packages/forest/src/components/action/action.mdx
@@ -1,5 +1,9 @@
 # Action
 
+```js
+import { Action } from 'piny-forest'
+```
+
 Small text-like button component. Accepts same variants as [Text](#text),
 but behaves like [Button](#button).
 
