♻️ Remove not necessary constants

--- a/packages/forest/src/primitives/z-stack/z-stack.mdx
+++ b/packages/forest/src/primitives/z-stack/z-stack.mdx
@@ -1,9 +1,9 @@
 # ZStack
 
 Based on [Flex](#flex). Items positioned one after another on z-axis.
+[Idea from Swift UI.](https://developer.apple.com/documentation/swiftui/zstack)
 
-Experimental, can be removed later if there is no enough use cases.
-[Idea taken from Swift UI.](https://developer.apple.com/documentation/swiftui/zstack)
+🧪 Experimental, can be removed later if there is no enough use cases.
 
 ```jsx live
 <ZStack
