✨ Add side navigation to documentation website

--- a/packages/forest/src/primitives/flex/flex.mdx
+++ b/packages/forest/src/primitives/flex/flex.mdx
@@ -1,4 +1,11 @@
+export const id = 'flex'
+export const title = 'Flex'
+
 # Flex
+
+```js
+import { Flex } from 'piny-forest'
+```
 
 ```jsx live
 <Flex h={100} fg="white" bg="lime">
