--- a/packages/forest/src/primitives/grid/grid.mdx
+++ b/packages/forest/src/primitives/grid/grid.mdx
@@ -1,4 +1,11 @@
+export const id = 'grid'
+export const title = 'Grid'
+
 # Grid
+
+```js
+import { Grid } from 'piny-forest'
+```
 
 ```jsx live
 <Grid
