--- a/packages/forest/src/primitives/h-stack/h-stack.mdx
+++ b/packages/forest/src/primitives/h-stack/h-stack.mdx
@@ -1,4 +1,11 @@
+export const id = 'hstack'
+export const title = 'HStack'
+
 # HStack
+
+```js
+import { HStack } from 'piny-forest'
+```
 
 ```jsx live
 <HStack align="center" gap="1rem" h={100} fg="white" bg="lime">
