--- a/packages/forest/src/primitives/image/image.mdx
+++ b/packages/forest/src/primitives/image/image.mdx
@@ -1,4 +1,11 @@
+export const id = 'image'
+export const title = 'Image'
+
 # Image
+
+```js
+import { Image } from 'piny-forest'
+```
 
 ```jsx live
 <Image
