--- a/packages/forest/src/primitives/input/input.mdx
+++ b/packages/forest/src/primitives/input/input.mdx
@@ -1,4 +1,11 @@
+export const id = 'input'
+export const title = 'Input'
+
 # Input
+
+```js
+import { Input } from 'piny-forest'
+```
 
 ```jsx live
 <Input
