--- a/packages/forest/src/primitives/label/label.mdx
+++ b/packages/forest/src/primitives/label/label.mdx
@@ -1,4 +1,11 @@
+export const id = 'label'
+export const title = 'Label'
+
 # Label
+
+```js
+import { Label } from 'piny-forest'
+```
 
 ```jsx live
 <Label htmlFor='email'>Email</Label>
