--- a/packages/forest/src/primitives/link/link.mdx
+++ b/packages/forest/src/primitives/link/link.mdx
@@ -1,4 +1,11 @@
+export const id = 'link'
+export const title = 'Link'
+
 # Link
+
+```js
+import { Link } from 'piny-forest'
+```
 
 ```jsx live
 <Link
