--- a/packages/forest/src/primitives/list/list.mdx
+++ b/packages/forest/src/primitives/list/list.mdx
@@ -1,4 +1,11 @@
+export const id = 'list'
+export const title = 'List'
+
 # List
+
+```js
+import { List, ListItem } from 'piny-forest'
+```
 
 ```jsx live
 <List>
