--- a/packages/forest/src/primitives/scroll/scroll.mdx
+++ b/packages/forest/src/primitives/scroll/scroll.mdx
@@ -1,4 +1,11 @@
+export const id = 'scroll'
+export const title = 'Scroll'
+
 # Scroll
+
+```js
+import { Scroll } from 'piny-forest'
+```
 
 ```jsx live
 <Scroll h={300} fg="white">
