--- a/packages/forest/src/primitives/select/select.mdx
+++ b/packages/forest/src/primitives/select/select.mdx
@@ -1,4 +1,11 @@
+export const id = 'select'
+export const title = 'Select'
+
 # Select
+
+```js
+import { Select } from 'piny-forest'
+```
 
 ```jsx live
 <Select
