--- a/packages/forest/src/primitives/text/text.mdx
+++ b/packages/forest/src/primitives/text/text.mdx
@@ -1,4 +1,11 @@
+export const id = 'text'
+export const title = 'Text'
+
 # Text
+
+```js
+import { Text } from 'piny-forest'
+```
 
 ```jsx live
 <Text
