--- a/packages/forest/src/primitives/textarea/textarea.mdx
+++ b/packages/forest/src/primitives/textarea/textarea.mdx
@@ -1,4 +1,11 @@
+export const id = 'textarea'
+export const title = 'Textarea'
+
 # Textarea
+
+```js
+import { Textarea } from 'piny-forest'
+```
 
 ```jsx live
 <Textarea
