--- a/packages/forest/src/primitives/v-stack/v-stack.mdx
+++ b/packages/forest/src/primitives/v-stack/v-stack.mdx
@@ -1,4 +1,11 @@
+export const id = 'vstack'
+export const title = 'VStack'
+
 # VStack
+
+```js
+import { VStack } from 'piny-forest'
+```
 
 ```jsx live
 <VStack align="center" gap="1rem" fg="white" bg="lime">
