--- a/packages/forest/src/primitives/z-stack/z-stack.mdx
+++ b/packages/forest/src/primitives/z-stack/z-stack.mdx
@@ -1,4 +1,11 @@
+export const id = 'zstack'
+export const title = 'ZStack'
+
 # ZStack
+
+```js
+import { ZStack } from 'piny-forest'
+```
 
 Based on [Flex](#flex). Items positioned one after another on z-axis.
 [Idea from Swift UI.](https://developer.apple.com/documentation/swiftui/zstack)
