♻️ Make `Pin` title api consistent with note, compose `Status` same way as `Action`

--- a/packages/forest/src/components/pin/pin.mdx
+++ b/packages/forest/src/components/pin/pin.mdx
@@ -38,7 +38,9 @@ Without `PinMedia` both variants look the same .
     </Link>
   </PinMedia>
   <PinTitle>
-    <Link href="#link">Heading</Link>
+    <Link href="#link">
+      <Text as="h3">Heading</Text>
+    </Link>
   </PinTitle>
   <PinNote>
     <Text as="p">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</Text>
