--- a/packages/forest/src/components/pin/pin.mdx
+++ b/packages/forest/src/components/pin/pin.mdx
@@ -38,7 +38,7 @@ Without `PinMedia` both variants look the same .
     </Link>
   </PinMedia>
   <PinTitle>
-    <Link href="#link">
+    <Link href="#text">
       <Text as="h3">Heading</Text>
     </Link>
   </PinTitle>
