--- a/packages/forest/src/components/pin/pin.mdx
+++ b/packages/forest/src/components/pin/pin.mdx
@@ -51,14 +51,16 @@ Without `PinMedia` both variants look the same .
     <Tag href="#tag">Tag 3</Tag>
   </PinTags>
   <PinActions>
-    <Status as="time" datetime="22:00" title="22:00">
-      1 minute ago
-    </Status>
-    <Action>later</Action>
+    <Link href="#status">
+      <Status as="time" datetime="22:00" title="22:00">
+        1 minute ago
+      </Status>
+    </Link>
     <Action>like</Action>
-    <Action>archive</Action>
-    <Action accent="destructive" ml="auto">
-      remove
+    <Action>later</Action>
+    <Action>edit</Action>
+    <Action ml="auto" accent="destructive">
+      archive
     </Action>
   </PinActions>
 </Pin>
