--- a/packages/forest/src/components/pin/pin.mdx
+++ b/packages/forest/src/components/pin/pin.mdx
@@ -57,7 +57,7 @@ Without `PinMedia` both variants look the same .
       </Status>
     </Link>
     <Action>like</Action>
-    <Action>later</Action>
+    <Action accent="later">later</Action>
     <Action>edit</Action>
     <Action ml="auto" accent="destructive">
       archive
