--- a/packages/forest/src/components/provider/provider.mdx
+++ b/packages/forest/src/components/provider/provider.mdx
@@ -9,6 +9,6 @@ import { Theme, Provider } from 'piny-forest'
 
 ```jsx live
 <Provider theme={Theme}>
-  <Box bg="primary" s={64} />
+  <Box bg="accent" s={64} />
 </Provider>
 ```
