✨ Add `Group`, `AddButton`, `Header` and `PlusIcon` components

--- a/packages/forest/src/components/action/action.mdx
+++ b/packages/forest/src/components/action/action.mdx
@@ -14,5 +14,5 @@ Color on `:hover` can be changed with `accent` prop.
 
 ```jsx live
 <Action>Normal</Action>
-<Action accent='destructive'>Destructive</Action>
+<Action accent='danger'>Destructive</Action>
 ```
