--- a/packages/forest/src/components/icons/icons.mdx
+++ b/packages/forest/src/components/icons/icons.mdx
@@ -4,9 +4,12 @@ export const title = 'Icons'
 # Icons
 
 ```js
-import { BoxIcon } from 'piny-forest'
+import { BoxIcon, PlusIcon } from 'piny-forest'
 ```
 
 ```jsx live
-<BoxIcon />
+<Grid gap="s.8" columns="repeat(auto-fill, 1rem)">
+  <BoxIcon />
+  <PlusIcon />
+</Grid>
 ```
