--- a/packages/forest/src/components/item/iterm.mdx
+++ b/packages/forest/src/components/item/iterm.mdx
@@ -8,5 +8,6 @@ import { Item } from 'piny-forest'
 ```
 
 ```jsx live
-<Item icon={<BoxIcon />}>All</Item>
+<Item icon={BoxIcon}>Default</Item>
+<Item icon={BoxIcon} variant='accent'>Accent</Item>
 ```
