--- a/packages/forest/src/components/pin/pin.mdx
+++ b/packages/forest/src/components/pin/pin.mdx
@@ -32,7 +32,7 @@ Without `PinMedia` both variants look the same .
         pss={{
           size: '100%',
           objectFit: 'cover',
-          boxShadow: 'image',
+          boxShadow: 'level.20',
         }}
       />
     </Link>
@@ -57,9 +57,9 @@ Without `PinMedia` both variants look the same .
       </Status>
     </Link>
     <Action>like</Action>
-    <Action accent="later">later</Action>
+    <Action accent="accent">later</Action>
     <Action>edit</Action>
-    <Action ml="auto" accent="destructive">
+    <Action ml="auto" accent="danger">
       archive
     </Action>
   </PinActions>
