♻️ Drop `Variants` suffix from names

--- a/packages/forest/src/primitives/api.mdx
+++ b/packages/forest/src/primitives/api.mdx
@@ -108,7 +108,7 @@ Use `variant` prop to set styles using values from your [theme](#theme).
 ```jsx live
 <Provider
   theme={{
-    boxVariants: {
+    boxes: {
       circle: {
         display: 'grid',
         placeItems: 'center',
