--- a/packages/forest/src/primitives/input/input.mdx
+++ b/packages/forest/src/primitives/input/input.mdx
@@ -11,7 +11,7 @@ import { Input } from 'piny-forest'
 <Input
   defaultValue="Hello"
   theme={{
-    inputVariants: {
+    inputs: {
       default: {
         width: '100%',
       },
