--- a/packages/forest/src/primitives/link/link.mdx
+++ b/packages/forest/src/primitives/link/link.mdx
@@ -11,7 +11,7 @@ import { Link } from 'piny-forest'
 <Link
   href="https://example.com"
   theme={{
-    linkVariants: {
+    links: {
       default: {
         color: 'royalblue',
         textDecoration: 'underline',
