--- a/packages/forest/src/primitives/text/text.mdx
+++ b/packages/forest/src/primitives/text/text.mdx
@@ -24,7 +24,7 @@ import { Text } from 'piny-forest'
     colors: {
       primary: 'blue',
     },
-    textVariants: {
+    texts: {
       primary: {
         color: 'primary',
         textDecoration: 'underline',
