--- a/packages/forest/src/primitives/textarea/textarea.mdx
+++ b/packages/forest/src/primitives/textarea/textarea.mdx
@@ -11,7 +11,7 @@ import { Textarea } from 'piny-forest'
 <Textarea
   defaultValue="Hello"
   theme={{
-    textareaVariants: {
+    textareas: {
       default: {
         width: '100%',
       },
