--- a/packages/forest/src/primitives/button/button.mdx
+++ b/packages/forest/src/primitives/button/button.mdx
@@ -14,7 +14,7 @@ import { Button } from 'piny-forest'
     colors: {
       primary: 'royalblue',
     },
-    buttonVariants: {
+    buttons: {
       primary: {
         backgroundColor: 'primary',
         color: 'white',
