--- a/packages/forest/src/primitives/select/select.mdx
+++ b/packages/forest/src/primitives/select/select.mdx
@@ -11,7 +11,7 @@ import { Select } from 'piny-forest'
 <Select
   defaultValue="main"
   theme={{
-    selectVariants: {
+    selects: {
       default: {
         width: '100%',
       },
