♿️ Improve accessibility & remove `AddButton`

--- a/packages/forest/src/components/pin/pin.mdx
+++ b/packages/forest/src/components/pin/pin.mdx
@@ -34,6 +34,7 @@ Without `PinMedia` both variants look the same .
           objectFit: 'cover',
           boxShadow: 'level.20',
         }}
+        alt="Cute kitten"
       />
     </Link>
   </PinMedia>
