--- a/packages/forest/src/primitives/api.mdx
+++ b/packages/forest/src/primitives/api.mdx
@@ -65,8 +65,9 @@ export const title = 'API'
 ### Change HTML element
 
 ```jsx live
-<Box as="main">Main</Box>
-<Box as="a" href='https://google.com' target='_blank'>Link</Box>
+<Box as="a" href="https://google.com" target="_blank">
+  Link
+</Box>
 ```
 
 ### Theme-aware styles
