--- a/packages/forest/src/primitives/image/image.mdx
+++ b/packages/forest/src/primitives/image/image.mdx
@@ -11,5 +11,6 @@ import { Image } from 'piny-forest'
 <Image
   src="https://placekitten.com/2047/1536"
   pss={{ borderRadius: 16, height: 'auto', maxWidth: '100%' }}
+  alt="Cute kitten"
 />
 ```
