♻️ Refactor `ZStack` to css grid

--- a/packages/forest/src/primitives/z-stack/z-stack.mdx
+++ b/packages/forest/src/primitives/z-stack/z-stack.mdx
@@ -7,23 +7,26 @@ export const title = 'ZStack'
 import { ZStack } from 'piny-forest'
 ```
 
-Based on [Flex](#flex). Items positioned one after another on z-axis.
+Based on [Grid](#grid). Items positioned one after another.
 [Idea from Swift UI.](https://developer.apple.com/documentation/swiftui/zstack)
 
-🧪 Experimental, can be removed later if there is no enough use cases.
-
 ```jsx live
-<ZStack
-  fg="white"
-  bg="lime"
-  pss={{
-    height: 200,
-    alignItems: 'center',
-    justifyContent: 'center',
-  }}
->
-  <Box bg="blue" s={100} />
-  <Box bg="red" s={50} />
-  <Box bg="yellow" s={75} pss={{ left: 's.16', bottom: 's.16' }} />
+<ZStack placeItems="center" fg="white" bg="lime">
+  <Image
+    src="https://placekitten.com/1600/800"
+    width={800}
+    height={400}
+    alt="Cute kitten"
+    pss={{ height: 'auto', maxWidth: '100%' }}
+  />
+  <Box bg="red" s={100} />
+  <Box
+    bg="yellow"
+    pss={{
+      placeSelf: 'end start',
+      margin: 's.24',
+      size: 40,
+    }}
+  />
 </ZStack>
 ```
