🧪 Add `horizontal` mobile variant to `Layout`

--- a/packages/forest/src/components/layout/layout.mdx
+++ b/packages/forest/src/components/layout/layout.mdx
@@ -16,3 +16,11 @@ Primary layout component, should be used for wrapping whole app or page. `Layout
   <LayoutAside bg="grey.10">Aside</LayoutAside>
 </Layout>
 ```
+
+```jsx live isolate
+<Layout variant="keep-horizontal" bg="grey.20" pss={{ minHeight: '100vh' }}>
+  <LayoutNav bg="grey.10">Nav</LayoutNav>
+  <LayoutMain bg="grey.10">Main</LayoutMain>
+  <LayoutAside bg="grey.10">Aside</LayoutAside>
+</Layout>
+```
