--- a/packages/forest/src/components/pin/pin.mdx
+++ b/packages/forest/src/components/pin/pin.mdx
@@ -54,11 +54,11 @@ Without `PinMedia` both variants look the same .
     <Tag href="#tag">Tag 3</Tag>
   </PinTags>
   <PinActions>
+    <Action>edit</Action>
     <Action>like</Action>
     <Action accent="accent">later</Action>
-    <Action>edit</Action>
     <Action accent="danger">archive</Action>
-    <Box ml="auto" />
+    <Spacer />
     <Link href="#status">
       <Status as="time" datetime="22:00" title="22:00">
         1 minute ago
