--- a/packages/forest/src/primitives/h-stack/h-stack.mdx
+++ b/packages/forest/src/primitives/h-stack/h-stack.mdx
@@ -8,7 +8,7 @@ import { HStack } from 'piny-forest'
 ```
 
 ```jsx live
-<HStack align="center" gap="1rem" h={100} fg="white" bg="lime">
+<HStack align="center" space="s.16" h={100} fg="white" bg="lime">
   <Box bg="blue" pss={{ flex: '1' }}>
     1
   </Box>
