--- a/packages/forest/src/primitives/v-stack/v-stack.mdx
+++ b/packages/forest/src/primitives/v-stack/v-stack.mdx
@@ -8,7 +8,7 @@ import { VStack } from 'piny-forest'
 ```
 
 ```jsx live
-<VStack align="center" gap="1rem" fg="white" bg="lime">
+<VStack align="center" space="s.16" fg="white" bg="lime">
   <Box bg="blue">1</Box>
   <Box bg="red">2</Box>
 </VStack>
