♻️ Reset stack space to `auto` value in `Spacer`

--- a/packages/forest/src/components/pin/pin.mdx
+++ b/packages/forest/src/components/pin/pin.mdx
@@ -44,9 +44,7 @@ Without `PinMedia` both variants look the same .
     </Link>
   </PinTitle>
   <PinNote>
-    <Text as="p" mb="s.16">
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-    </Text>
+    <Text as="p">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</Text>
   </PinNote>
   <PinTags>
     <Tag href="#tag">Tag 1</Tag>
