--- a/packages/forest/src/components/pin/pin.mdx
+++ b/packages/forest/src/components/pin/pin.mdx
@@ -53,8 +53,8 @@ Without `PinMedia` both variants look the same .
   <PinActions>
     <Action>edit</Action>
     <Action>like</Action>
-    <Action accent="accent">later</Action>
-    <Action accent="danger">archive</Action>
+    <Action variant="accent">later</Action>
+    <Action variant="danger">archive</Action>
     <Spacer />
     <Link href="#status">
       <Status as="time" datetime="22:00" title="22:00">
