🚧 Add `Field` component

--- a/packages/forest/src/components/pin/pin.mdx
+++ b/packages/forest/src/components/pin/pin.mdx
@@ -31,7 +31,7 @@ Without `PinMedia` both variants look the same .
         pss={{
           size: '100%',
           objectFit: 'cover',
-          boxShadow: 'level.20',
+          boxShadow: 'black.20',
         }}
         alt="Cute kitten"
       />
