--- a/packages/forest/src/primitives/button/button.mdx
+++ b/packages/forest/src/primitives/button/button.mdx
@@ -27,6 +27,12 @@ import { Button } from 'piny-forest'
 ```
 
 ```jsx live
+<Button type="submit" variant="black">
+  Next
+</Button>
+```
+
+```jsx live
 <Button variant="round" aria-label="Add link">
   <PlusIcon />
 </Button>
