--- a/packages/forest/src/components/action/action.mdx
+++ b/packages/forest/src/components/action/action.mdx
@@ -14,5 +14,5 @@ but behaves like [Button](#button).
 <Action variant="tertiary">Tertiary</Action>
 <Action variant="secondary">Secondary (default)</Action>
 <Action variant="accent">Accent</Action>
-<Action variant="danger">Destructive</Action>
+<Action variant="negative">Destructive</Action>
 ```
