--- a/packages/forest/src/components/icons/icons.mdx
+++ b/packages/forest/src/components/icons/icons.mdx
@@ -9,6 +9,7 @@ import { BoxIcon, PlusIcon } from 'piny-forest'
 ```jsx live
 <Grid gap="s.8" columns="repeat(auto-fill, 1rem)">
   <BoxIcon />
+  <GearIcon />
   <PlusIcon />
 </Grid>
 ```
