--- a/packages/forest/src/components/pin/pin.mdx
+++ b/packages/forest/src/components/pin/pin.mdx
@@ -54,7 +54,7 @@ Without `PinMedia` both variants look the same .
     <Action>edit</Action>
     <Action>like</Action>
     <Action variant="accent">later</Action>
-    <Action variant="danger">archive</Action>
+    <Action variant="negative">archive</Action>
     <Spacer />
     <Link href="#status">
       <Status as="time" datetime="22:00" title="22:00">
