--- a/packages/forest/src/primitives/button/button.mdx
+++ b/packages/forest/src/primitives/button/button.mdx
@@ -27,7 +27,7 @@ import { Button } from 'piny-forest'
 ```
 
 ```jsx live
-<Button type="submit" variant="black">
+<Button type="submit" variant="contrast">
   Next
 </Button>
 ```
@@ -35,5 +35,11 @@ import { Button } from 'piny-forest'
 ```jsx live
 <Button variant="round" aria-label="Add link">
   <PlusIcon />
+</Button>
+```
+
+```jsx live
+<Button variant="round">
+  <GearIcon /> <Text>Settings</Text>
 </Button>
 ```
