--- a/packages/forest/src/components/welcome-form/welcome-form.mdx
+++ b/packages/forest/src/components/welcome-form/welcome-form.mdx
@@ -25,7 +25,7 @@ export const title = 'WelcomeForm'
     />
   </WelcomeFormFields>
   <WelcomeFormActions>
-    <Button type="submit" variant="black">
+    <Button type="submit" variant="contrast">
       Next
     </Button>
   </WelcomeFormActions>
@@ -54,7 +54,7 @@ export const title = 'WelcomeForm'
     />
   </WelcomeFormFields>
   <WelcomeFormActions>
-    <Button type="submit" variant="black">
+    <Button type="submit" variant="contrast">
       Login
     </Button>
     <Action variant="primary">Send magic link</Action>
@@ -98,7 +98,7 @@ export const title = 'WelcomeForm'
     />
   </WelcomeFormFields>
   <WelcomeFormActions>
-    <Button type="submit" variant="black">
+    <Button type="submit" variant="contrast">
       Create
     </Button>
   </WelcomeFormActions>
